# StuCanvas

./: .gitignore  .gitmodules  AI.py  CMakeLists.txt  LICENSE  README.md  RPN.cpp  RPN.h  backup.cpp  build.bat  cas.cpp  functions.h  index.html  lerp.h  main.cpp  main.js  main.wasm  package-lock.json  package.json  pch.h  plotCall.cpp  plotCall.h  plotExplicit.cpp  plotExplicit.h  plotImplicit.cpp  plotImplicit.h  plotParametric.cpp  plotParametric.h  test.cpp  typst_test.cpp
assets/: index-BFCHuw_c.js  index-BlIKxQcn.css
docs/articles/: 函数绘图算法.typ
include/CAS/: JsonAdapter.h
include/CAS/AST/: JsonAdapter.h
include/CAS/RPN/: FormulaNormalizer.h  MultiIntervalRPN.h  RPN.h  ShuntingYard.h  SyntaxChecker.h
include/StuScript/: Codegen.hpp  Diagnostic.hpp  Sema.hpp  ast.hpp  lexer.hpp  parser.hpp
include/StuVM/: StuCompiler.hpp  StuVM_Engine.hpp
include/functions/: functions.h  lerp.h
include/gpu/: app.hpp  camera.hpp  context.hpp  geometry.hpp  gui.hpp  math_utils.hpp  svg_loader.hpp  utils.hpp
include/graph/: CommandManager.h  GeoCommands.h  GeoEngine.h  GeoFactory.h  GeoGraph.h  GeoInteract.h  GeoSolver.h
include/grids/: grids.h
include/interval/: MultiInterval.h  interval.h
include/plot/: plotCall.h  plotCircle.h  plotExplicit.h  plotExplicit3D.hpp  plotImplicit.h  plotIndustry.h  plotIndustryParametric.h  plotLine.h  plotParametric.h  plotSegment.h
include/video/: config.hpp  ffmpeg_utils.hpp  physics_utils.hpp  render_utils.hpp
scirpts/: GenerateSummary.py  generate_node_types.py  node_type.hpp  node_types.json
scripts/: CppTemplateSpeedTest.cpp  CppTemplateSpeedTest.py  GenerateSummary.py  HDR_test.py  generate_node_types.py  huge_templates.cppm  huge_templates.hpp  instantiations.cpp  main.cpp  main_header.cpp  main_module.cpp  node_type.hpp  node_types.json  points.txt  project_summary.txt  render_point_cloud.py
src/: .gitignore  App.svelte  BallOne.cpp  FormulaInput.svelte  RPN.cpp  RingsAndBalls.cpp  StuScriptTest.cpp  StuVMTest.cpp  grid.wgsl  interval_inst.cpp  main.cpp  plotCall.cpp  plotExplicit.cpp  plotImplicit.cpp  plotParametric.cpp  shader-template.ts  shader.wgsl  video1.cpp  video2.cpp  video3.cu  vite-env.d.ts
src/CAS/: JsonAdapter.cpp
src/aa/: aa-interface.ts  fxaa-renderer.ts  msaa-renderer.ts  no-aa-renderer.ts  ssaa-renderer.ts
src/function/: unifiedRenderer.ts
src/geometry/: FunctionGraph.svelte  GridLineRenderer.svelte  ImplicitFunctionBatchRenderer.svelte  function.batch.fragment.wgsl  function.implicit.fragment.wgsl  function.implicit.vertex.wgsl  function.render.wgsl  wgsl-translator.ts
src/graph/: CommandManager.cpp  GeoCommands.cpp  GeoFactory.cpp  GeoGraph.cpp  GeoInteract.cpp  GeoSolver.cpp
src/grids/: grids.cpp
src/interval/: intervalEvaluate.cpp
src/lib/: canvas-interaction.ts  grid.ts  pyodide-loader.ts  stores.ts
src/plot/: plotCall.cpp  plotCircle.cpp  plotExplicit.cpp  plotImplicit.cpp  plotIndustry.cpp  plotIndustryParametric.cpp  plotLine.cpp  plotParametric.cpp  plotSegment.cpp
src/renderCore/: renderer.ts  webgpu-helpers.ts
src/rightMenu/: AlgebraWindow.svelte  RightMenu.svelte
src/stores/: camera.ts  ui.ts
src/utils/: color-utils.ts  math-instance.ts  webgpu-helpers.ts
stucanvas/cache/: hash.hpp  macros.hpp  processor.hpp
stucanvas/camera/: camera.hpp
stucanvas/canvas/: animation.hpp  camera_types.hpp  camera_types.json  cameras.hpp  canvas.hpp  queue.hpp  track.hpp  viewports.hpp
stucanvas/canvas_old/: canvas.hpp
stucanvas/deprecated_geometry/: graph.hpp  solver.hpp
stucanvas/deprecated_reconstruction/: bezier_fit_2d.hpp  qhull_wrapper.hpp  quick_hull_3d.hpp  reconstruct.hpp  simple_voxelizer.hpp  statistics.hpp  voxel_cluster_decomposer.hpp
stucanvas/geometry/: graph.hpp  plotter.hpp  solver.hpp
stucanvas/object/: graph.hpp  object.hpp  types.hpp
stucanvas/plot/: implicit_2d.hpp  implicit_2d_scalar.hpp  implicit_3d.hpp  parametric_2d.hpp  parametric_3d.hpp
stucanvas/reconstruction/: bezier_fitting.hpp  boolean_engine.hpp  convex_point_splitter.hpp  mesh_welder.hpp  octree_decomposer.hpp  quick_hull_3d.hpp  simple_voxelizer.hpp  statistics.hpp  voxel_cluster_decomposer.hpp  voxel_interval_engine_3d.hpp
stucanvas/rust_bridge/typst_c/: Cargo.toml  typst_c.hpp
stucanvas/rust_bridge/typst_c/src/: lib.rs  main.rs  outline_builder.rs  parser.rs  printer.rs  types.rs
stucanvas/shaders/: paths.slang  points.slang  rgb_to_nv12.slang  segments.slang  traingles.slang  triangles.slang
stucanvas/sobject/: appearance.hpp  asset.hpp  assets.hpp  creators.hpp  discretizer_points.hpp  family.hpp  getters.hpp  graph.hpp  instance.hpp  layout.hpp  modifiers.hpp  object.hpp  object_data.hpp  snap_solver.hpp  sobject.hpp  sobject_data.hpp  sobject_types.hpp  solver.hpp  tangent_solver.hpp  transformation.hpp  types.hpp  visual.hpp
stucanvas/types/: deprecated_bounding_box.hpp  path.hpp  point.hpp  segment_strip.hpp  triangles.hpp
stucanvas/utils/: block_deque.hpp  compact_string.hpp  differential_evoluation.hpp  flat_map.hpp  flex_buffer.hpp  flex_list.hpp  flex_vector.hpp  function.hpp  interval.hpp  interval_inst.cpp  ivf_writer.hpp  l_shade.hpp  marching_cubes_tables.hpp  optimization_common.hpp  pinned_vector.hpp  ptr_block_deque.hpp  ptr_vector.hpp  tiny_vector.hpp
stucanvas/utils2/: av1_writer.hpp  block_deque.hpp  differential_evoluation.hpp  flex_buffer.hpp  flex_list.hpp  ivf_writer.hpp  paaa.hpp  simple_vector.hpp
tests/algorithm/: L-Shade.cpp  mcts.cpp  paaa.cpp  plot_implicit_2d_scalar.cpp
tests/canvas/: image  image.cpp
tests/ffi/: typst_test.cpp
tests/performance/: allocator_test.cpp  block_deque_test2.cpp  compact_ptr_test.cpp  compact_string_test.cpp  cpp_modules.cpp  cpu_cache_test_1.cpp  cpu_cache_test_2.cpp  deque_test.cpp  deque_vs_vector.cpp  flat_map_test.cpp  flex_buffer_test.cpp  flex_list_test.cpp  llvm_tiny_vector_test.cpp  pNext_test.cpp  pinned_vector.cpp  ptr_deque_test.cpp  ptr_vector_test.cpp  soa.cpp  taskflow_test.cpp  taskflow_test2.cpp  tiny_vector_test.cpp  virtual_case_test.cpp
tests/render/: iron_solid.cpp
(+167 files in other folders)
